# blender-mcp

./: README.md  main.py  pyproject.toml
docs/: aframe_architecture.md  aframe_transition_plan.md  aframe_vr_transition_plan.md
examples/: sample_scene.html
src/aframe_mcp/: __init__.py  bridge_server.py  server.py
web/: aframe_bridge.js
