[project]
name = "aframe-mcp"
version = "0.1.0"
description = "A-Frame VR integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "websockets>=12.0",
]

[project.scripts]
aframe-mcp = "aframe_mcp.server:main"
aframe-mcp-bridge = "aframe_mcp.bridge_server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/yourusername/aframe-mcp"
"Bug Tracker" = "https://github.com/yourusername/aframe-mcp/issues"
